--- a/index.html
+++ b/index.html
@@ -1,208 +1,94 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Portail — Archivage restreint</title>
-<style>
-  :root{
-    --bg:#eef2f6; --card:#ffffff; --text:#0b1220; --muted:#6b7280; --accent:#0f1724;
-  }
-  *{box-sizing:border-box}
-  html,body{height:100%;margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial;background:var(--bg);color:var(--text)}
-  .wrap{max-width:980px;margin:44px auto;padding:28px;background:var(--card);border-radius:10px;box-shadow:0 8px 30px rgba(8,12,20,0.06);border-left:6px solid rgba(8,12,20,0.04)}
-  .head{display:flex;gap:18px;align-items:center}
-  .badge{width:84px;height:84px;border-radius:8px;background:linear-gradient(180deg,#071029,#123046);color:#fff;display:flex;align-items:center;justify-content:center;cursor:pointer;user-select:none}
-  .title h1{margin:0;font-size:20px}
-  .subtitle{color:var(--muted);margin-top:6px;font-size:13px}
-  .notice{margin-top:18px;padding:14px;border-radius:8px;background:#f8fafc;border:1px solid rgba(8,12,20,0.03);color:var(--muted);font-size:14px}
-  .status{margin-top:12px;font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,monospace;color:#0f1724}
-  .ref{margin-top:8px;color:var(--muted);font-size:13px}
+  <meta charset="UTF-8">
+  <title>Erreur</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  .vault{margin-top:20px;padding:14px;border-radius:8px;background:#071327;color:#dff3ff;display:none}
-  .vault a{color:#cfe8ff;text-decoration:underline}
+  <style>
+    :root {
+      --bg: #0d0d0f;
+      --fg: #e5e5e7;
+      --muted: #8a8a8f;
+      --line: #1e1e22;
+      --accent: #b0b0b8;
+    }
 
-  /* overlay console */
-  .overlay{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(2,6,23,0.62);backdrop-filter:blur(3px);z-index:9999;visibility:hidden;opacity:0;transition:opacity .14s}
-  .overlay.open{visibility:visible;opacity:1}
-  .terminal{width:760px;max-width:94%;background:#041428;border-radius:10px;padding:12px;border:1px solid rgba(255,255,255,0.04)}
-  .log{height:220px;overflow:auto;padding:10px;background:#011724;border-radius:6px;font-family:ui-monospace,monospace;color:#cfe8ff;font-size:13px;white-space:pre-wrap}
-  .controls{display:flex;gap:8px;margin-top:10px}
-  .controls input{flex:1;padding:8px;border-radius:6px;border:1px solid rgba(255,255,255,0.06);background:#061827;color:#e6eefc}
-  .controls button{padding:8px 12px;border-radius:6px;border:none;background:#0ea5a9;color:white;cursor:pointer}
-  .hint{color:#94a3b8;margin-top:8px;font-size:13px}
-  @media (max-width:520px){ .log{height:140px} }
-</style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      height: 100vh;
+      background-color: var(--bg);
+      color: var(--fg);
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                   Roboto, Helvetica, Arial, sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .container {
+      max-width: 520px;
+      padding: 32px;
+      border: 1px solid var(--line);
+      background: linear-gradient(180deg, #0f0f12 0%, #0b0b0d 100%);
+    }
+
+    .title {
+      font-size: 18px;
+      font-weight: 500;
+      margin-bottom: 16px;
+      color: var(--accent);
+      letter-spacing: 0.5px;
+    }
+
+    .description {
+      font-size: 14px;
+      line-height: 1.6;
+      color: var(--muted);
+      margin-bottom: 24px;
+    }
+
+    .divider {
+      height: 1px;
+      background-color: var(--line);
+      margin: 24px 0;
+    }
+
+    .footer {
+      font-size: 12px;
+      color: var(--muted);
+      display: flex;
+      justify-content: space-between;
+      gap: 12px;
+      flex-wrap: wrap;
+    }
+
+    .footer span {
+      white-space: nowrap;
+    }
+  </style>
 </head>
+
 <body>
-  <main class="wrap" id="app">
-    <div class="head">
-      <div class="badge" id="badge" title="Cliquez plusieurs fois">
-        <div style="text-align:center">
-          <div style="font-size:18px;font-weight:700">N•I</div>
-          <div style="font-size:10px;margin-top:2px">ARCHIVE</div>
-        </div>
-      </div>
-      <div class="title">
-        <h1>Portail d'accès — Archivage restreint</h1>
-        <div class="subtitle">Service de conservation — accès restreint</div>
-        <div class="ref" id="lastSynch">Dernière synchronisation : 02/03/1979</div>
-      </div>
+  <div class="container">
+    <div class="title">Une erreur est survenue</div>
+
+    <div class="description">
+      La ressource demandée n’est pas disponible.<br>
+      L’accès a échoué ou a été interrompu.
     </div>
 
-    <div class="notice" id="notice">
-      Ressources archivées — service temporairement désactivé pour inventaire. Toute tentative d'accès non autorisée est enregistrée.
-    </div>
+    <div class="divider"></div>
 
-    <div class="status" id="status">État : <strong>— INACTIF —</strong></div>
-    <div class="ref" id="refCode">Référence : N-██-▢▢▢</div>
-
-    <section class="vault" id="vault" aria-hidden="true">
-      <h3>Accès délégué — Cache</h3>
-      <p>Ressource : <a id="secretLink" href="#" onclick="event.preventDefault()">/archives/nb/1979/—</a></p>
-      <p>Dossier : <strong id="vaultKey">—</strong></p>
-    </section>
-  </main>
-
-  <!-- console -->
-  <div class="overlay" id="overlay" aria-hidden="true" role="dialog">
-    <div class="terminal" role="document">
-      <div class="log" id="consoleLog">[SYSTEM] Mode discret initialisé.
-Tapez un code, puis Entrée.
-</div>
-      <div class="controls">
-        <input id="consoleInput" placeholder="Entrer code (ex: ARCHIVE-1979)" autocomplete="off" />
-        <button id="enterBtn">Valider</button>
-        <button id="closeBtn" style="background:#334155">Fermer</button>
-      </div>
-      <div class="hint">Astuce : séquence clavier secrète ou clics rapides sur le badge.</div>
+    <div class="footer">
+      <span>Statut : indisponible</span>
+      <span>Code interne : non communiqué</span>
+      <span>© système</span>
     </div>
   </div>
-
-<script>
-/* ------------------- CONFIG (modifie ici) -------------------
- allowedCodes : clefs acceptées (MAJUSCULES recommandées)
- secretPhrase : séquence de touches pour ouvrir la console
- clicksToOpen : nombre de clics rapides sur le badge
- storageKey : clé localStorage pour conserver progression
--------------------------------------------------------------*/
-const CONFIG = {
-  secretPhrase: 'overseer',   // tapez cette suite de lettres pour ouvrir
-  clicksToOpen: 5,            // clics rapides pour ouvrir la console
-  allowedCodes: {
-    'ARCHIVE-1979': { reveal: 'link', decoded: 'ARCHIVE-1979 — Dossier Phantom' },
-    'OBSCURA':       { reveal: 'text', decoded: 'OBSCURA — entrée validée' },
-    'RED-00':        { reveal: 'text', decoded: 'RED-00 — clef primaire' }
-  },
-  storageKey: 'arg_unlock_v_final'
-};
-/* ----------------------------------------------------------- */
-
-const overlay = document.getElementById('overlay');
-const input = document.getElementById('consoleInput');
-const logEl = document.getElementById('consoleLog');
-const enterBtn = document.getElementById('enterBtn');
-const closeBtn = document.getElementById('closeBtn');
-const vault = document.getElementById('vault');
-const vaultKey = document.getElementById('vaultKey');
-const secretLink = document.getElementById('secretLink');
-const badge = document.getElementById('badge');
-const refCode = document.getElementById('refCode');
-
-let unlocked = JSON.parse(localStorage.getItem(CONFIG.storageKey) || '[]');
-
-function writeLog(text){
-  const t = new Date().toLocaleTimeString();
-  logEl.textContent += `\n[${t}] ${text}`;
-  logEl.scrollTop = logEl.scrollHeight;
-}
-
-function openConsole(){
-  overlay.classList.add('open');
-  overlay.setAttribute('aria-hidden','false');
-  input.focus();
-  writeLog('Console ouverte.');
-}
-function closeConsole(){
-  overlay.classList.remove('open');
-  overlay.setAttribute('aria-hidden','true');
-  writeLog('Console fermée.');
-}
-
-function applyUnlocked(){
-  if(unlocked.length === 0) return;
-  vault.style.display = 'block';
-  vault.setAttribute('aria-hidden','false');
-  const last = unlocked[unlocked.length - 1];
-  vaultKey.textContent = last.decoded || last.code;
-  if(last.reveal === 'link'){
-    secretLink.href = '/hidden/archive?token=' + encodeURIComponent(last.code);
-    writeLog('Lien secret activé.');
-  }
-}
-
-function tryCode(raw){
-  const code = (raw||'').trim().toUpperCase();
-  if(!code){ writeLog('Aucune entrée fournie.'); return; }
-  writeLog('Tentative : ' + code);
-  if(CONFIG.allowedCodes[code]){
-    const payload = CONFIG.allowedCodes[code];
-    unlocked.push({ code: code, reveal: payload.reveal, decoded: payload.decoded || code, time: Date.now() });
-    localStorage.setItem(CONFIG.storageKey, JSON.stringify(unlocked));
-    writeLog('> Code accepté — accès accordé.');
-    applyUnlocked();
-  } else {
-    writeLog('> Code rejeté.');
-  }
-}
-
-/* UI events */
-enterBtn.addEventListener('click', ()=>{ tryCode(input.value); input.value=''; input.focus(); });
-closeBtn.addEventListener('click', closeConsole);
-input.addEventListener('keydown', (e)=>{ if(e.key === 'Enter'){ tryCode(input.value); input.value=''; } if(e.key === 'Escape'){ closeConsole(); } });
-
-/* badge rapid-click trigger */
-(function badgeClicks(){
-  let clicks = 0; let timer = null;
-  badge.addEventListener('click', ()=>{
-    clicks++;
-    if(timer) clearTimeout(timer);
-    timer = setTimeout(()=>{ clicks = 0; }, 900);
-    if(clicks >= CONFIG.clicksToOpen){
-      openConsole();
-      clicks = 0;
-    }
-  });
-})();
-
-/* key sequence detector */
-(function keySeq(){
-  const seq = CONFIG.secretPhrase.toLowerCase();
-  let buffer = '';
-  window.addEventListener('keydown', (e)=>{
-    // hotkey fallback
-    if(e.ctrlKey && e.altKey && e.key === '`'){ openConsole(); return; }
-    const k = e.key.length === 1 ? e.key : '';
-    buffer = (buffer + k).slice(-seq.length);
-    if(buffer.toLowerCase() === seq) openConsole();
-  });
-})();
-
-/* small fake: random ref code */
-(function fakeRef(){
-  const r = Math.random().toString(36).slice(2,7).toUpperCase();
-  refCode.textContent = 'Référence : N-' + r + '-██';
-})();
-
-/* fake status */
-(function fakeStatus(){
-  // status left as "INACTIF" to keep the camouflage
-})();
-
-applyUnlocked();
-
-/* debug helper */
-window._ARG = { tryCode, openConsole, closeConsole, CONFIG, unlocked };
-</script>
 </body>
 </html>
