--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
   body {
     margin: 0;
     height: 100vh;
-    background-color: #0a0a0a;
+    overflow: hidden;
+    font-family: "Courier New", Courier, monospace;
+
+    /* degraded background */
+    background:
+      radial-gradient(circle at 20% 30%, rgba(80,80,90,0.18), transparent 60%),
+      radial-gradient(circle at 80% 70%, rgba(40,60,70,0.18), transparent 55%),
+      linear-gradient(180deg, #0a0a0a, #050505);
+  }
+
+  body::after {
+    content: "";
+    position: fixed;
+    inset: 0;
     background-image:
       repeating-linear-gradient(
         0deg,
@@ -25,108 +38,11 @@
         transparent 1px,
         transparent 3px
       );
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: "Courier New", Courier, monospace;
+    pointer-events: none;
+    opacity: 0.9;
   }
 
   .popup {
     width: 380px;
     background-color: #121212;
     border: 1px solid #2a2a2a;
-    box-shadow:
-      0 0 0 1px #050505,
-      0 6px 18px rgba(0,0,0,0.9);
-    position: relative;
-  }
-
-  .popup::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40'%3E%3Crect width='1' height='1' fill='%23ffffff' fill-opacity='0.03'/%3E%3C/svg%3E");
-    opacity: 0.4;
-    pointer-events: none;
-  }
-
-  .titlebar {
-    padding: 6px 8px;
-    font-size: 12px;
-    color: #8f8f8f;
-    background-color: #161616;
-    border-bottom: 1px solid #2a2a2a;
-    letter-spacing: 0.3px;
-  }
-
-  .content {
-    padding: 16px;
-    font-size: 13px;
-    color: #b8b8b8;
-    line-height: 1.5;
-  }
-
-  .content p {
-    margin: 0 0 12px 0;
-  }
-
-  .actions {
-    padding: 10px;
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  .btn {
-    padding: 3px 14px;
-    font-size: 12px;
-    color: #b0b0b0;
-    background-color: #1a1a1a;
-    border: 1px solid #333;
-    cursor: default;
-  }
-
-  .btn:active {
-    background-color: #141414;
-  }
-
-  /* subtle dead pixel */
-  .dead-pixel {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    background: #ff0000;
-    opacity: 0.4;
-    top: 73%;
-    left: 61%;
-  }
-</style>
-</head>
-
-<body>
-  <div class="popup">
-    <div class="titlebar">
-      system message
-    </div>
-
-    <div class="content">
-      <p>
-        An internal process was interrupted.
-      </p>
-      <p>
-        The current state cannot be verified.
-      </p>
-      <p>
-        Further action is not recommended.
-      </p>
-    </div>
-
-    <div class="actions">
-      <div class="btn">OK</div>
-    </div>
-
-    <div class="dead-pixel"></div>
-  </div>
-
-  <!-- buffer not cleared -->
-</body>
-</html>
