--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     height: 100vh;
     overflow: hidden;
     font-family: "Courier New", Courier, monospace;
-
-    /* degraded background */
     background:
       radial-gradient(circle at 20% 30%, rgba(80,80,90,0.18), transparent 60%),
       radial-gradient(circle at 80% 70%, rgba(40,60,70,0.18), transparent 55%),
@@ -39,7 +37,6 @@
         transparent 3px
       );
     pointer-events: none;
-    opacity: 0.9;
   }
 
   .popup {
@@ -48,15 +45,6 @@
     border: 1px solid #2a2a2a;
     box-shadow: 0 6px 18px rgba(0,0,0,0.9);
     position: absolute;
-  }
-
-  .popup::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40'%3E%3Crect width='1' height='1' fill='%23ffffff' fill-opacity='0.03'/%3E%3C/svg%3E");
-    opacity: 0.35;
-    pointer-events: none;
   }
 
   .titlebar {
@@ -74,10 +62,6 @@
     line-height: 1.5;
   }
 
-  .content p {
-    margin: 0 0 12px 0;
-  }
-
   .actions {
     padding: 10px;
     display: flex;
@@ -92,7 +76,7 @@
     border: 1px solid #333;
   }
 
-  /* hidden console */
+  /* console */
   .console {
     position: fixed;
     inset: 0;
@@ -104,10 +88,19 @@
     z-index: 10;
   }
 
-  .console pre {
-    margin: 0;
-    line-height: 1.45;
+  .console-output {
     white-space: pre-wrap;
+    line-height: 1.45;
+  }
+
+  .console-input {
+    border: none;
+    outline: none;
+    background: transparent;
+    color: #bdbdbd;
+    font-family: inherit;
+    font-size: 13px;
+    width: 100%;
   }
 </style>
 </head>
@@ -127,41 +120,79 @@
 </div>
 
 <div class="console" id="console">
-<pre>
+  <div class="console-output" id="output">
 > runtime shell initialized
 > integrity check : failed
 > archive status : inconsistent
 
-> observer detected
-> classification pending
-
 > _
-</pre>
+  </div>
+  <input class="console-input" id="input" autocomplete="off">
 </div>
 
 <script>
-  /* popup slight drift */
+  /* === popup drift persistence === */
   const popup = document.getElementById("popup");
-  const offsetX = Math.floor(Math.random() * 6) - 3;
-  const offsetY = Math.floor(Math.random() * 6) - 3;
 
-  popup.style.left = `calc(50% + ${offsetX}px)`;
-  popup.style.top = `calc(50% + ${offsetY}px)`;
-  popup.style.transform = "translate(-50%, -50%)";
+  let posX = parseInt(localStorage.getItem("popupX")) || 50;
+  let posY = parseInt(localStorage.getItem("popupY")) || 50;
 
-  /* key sequence detection: Z E R O */
-  const sequence = ["z", "e", "r", "o"];
-  let index = 0;
+  // drift direction (fixed)
+  posX += 3;
+  posY += 1;
 
-  document.addEventListener("keydown", (e) => {
-    if (e.key.toLowerCase() === sequence[index]) {
-      index++;
-      if (index === sequence.length) {
-        document.getElementById("console").style.display = "block";
-        index = 0;
+  localStorage.setItem("popupX", posX);
+  localStorage.setItem("popupY", posY);
+
+  popup.style.left = `calc(${posX}% - 190px)`;
+  popup.style.top = `calc(${posY}% - 120px)`;
+
+  /* === key sequence ZERO === */
+  const sequence = ["z","e","r","o"];
+  let seqIndex = 0;
+  const consoleEl = document.getElementById("console");
+  const input = document.getElementById("input");
+  const output = document.getElementById("output");
+
+  document.addEventListener("keydown", e => {
+    if (e.key.toLowerCase() === sequence[seqIndex]) {
+      seqIndex++;
+      if (seqIndex === sequence.length) {
+        consoleEl.style.display = "block";
+        input.focus();
+        seqIndex = 0;
       }
     } else {
-      index = 0;
+      seqIndex = 0;
+    }
+  });
+
+  /* === console logic === */
+  let errors = 0;
+  const errorMessages = [
+    "error : invalid command",
+    "error : access not permitted",
+    "error : unresolved reference",
+    "error : operation rejected"
+  ];
+
+  input.addEventListener("keydown", e => {
+    if (e.key === "Enter") {
+      const msg = errorMessages[Math.floor(Math.random()*errorMessages.length)];
+      output.textContent += `\n> ${input.value}\n> ${msg}\n`;
+      input.value = "";
+      errors++;
+
+      if (errors >= 3) {
+        consoleEl.style.display = "none";
+        output.textContent = 
+`> runtime shell initialized
+> integrity check : failed
+> archive status : inconsistent
+
+> _`;
+        errors = 0;
+      }
     }
   });
 </script>
@@ -169,3 +200,4 @@
 <!-- state preserved -->
 </body>
 </html>
+
