--- a/index.html
+++ b/index.html
@@ -68,6 +68,30 @@
     .logo{font-size:40px}
     .word{font-size:8vmin}
   }
+  /* mobile chatbox (hidden by default) */
+.mobile-chat {
+  position: fixed;
+  bottom: 14px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(100% - 28px);
+  max-width: 420px;
+  background: rgba(18,18,18,0.95);
+  border: 1px solid #2a2a2a;
+  padding: 10px;
+  display: none;
+  z-index: 50;
+}
+
+.mobile-chat input {
+  width: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #bdbdbd;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 14px;
+}
 </style>
 </head>
 <body>
@@ -136,6 +160,9 @@
     </svg>
     <div class="word" id="wordText"></div>
   </div>
+  <div class="mobile-chat" id="mobileChat">
+  <input type="text" id="mobileInput" placeholder="input">
+</div>
 
 <script>
   // --- small helpers
@@ -321,6 +348,36 @@
   document.addEventListener('focusin', e=>{
     if(consoleEl.style.display === 'block' && e.target !== inputEl) inputEl.focus();
   });
+  // === MOBILE PINCH → CHATBOX ===
+
+let initialDistance = null;
+const mobileChat = document.getElementById("mobileChat");
+const mobileInput = document.getElementById("mobileInput");
+
+window.addEventListener("touchmove", (e) => {
+  if (e.touches.length === 2) {
+    const dx = e.touches[0].clientX - e.touches[1].clientX;
+    const dy = e.touches[0].clientY - e.touches[1].clientY;
+    const distance = Math.sqrt(dx * dx + dy * dy);
+
+    if (!initialDistance) {
+      initialDistance = distance;
+    } else if (distance < initialDistance * 0.85) {
+      mobileChat.style.display = "block";
+      mobileInput.focus();
+    }
+  }
+}, { passive: true });
+
+mobileInput.addEventListener("keydown", (e) => {
+  if (e.key === "Enter") {
+    if (mobileInput.value.trim().toLowerCase() === "zero") {
+      revealSiteLayer(); // EXISTE DÉJÀ
+      mobileChat.style.display = "none";
+    }
+    mobileInput.value = "";
+  }
+});
 </script>
 </body>
 </html>
