--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@ html, body {
   width: 100%;
   height: 100%;
   background:
-    radial-gradient(circle at 20% 20%, #2a1c1c, transparent 40%),
-    radial-gradient(circle at 80% 80%, #1c1f2a, transparent 40%),
-    #0a0a0a;
+    linear-gradient(180deg, #0e0e0e, #050505),
+    repeating-linear-gradient(
+      0deg,
+      rgba(255,255,255,0.02),
+      rgba(255,255,255,0.02) 1px,
+      transparent 1px,
+      transparent 2px
+    );
   font-family: "Courier New", monospace;
   overflow: hidden;
 }
@@ -21,29 +26,29 @@ html, body {
 /* POPUP */
 .popup {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgba(12,12,12,0.95);
+  background: #0c0c0c;
   border: 1px solid #2a2a2a;
-  width: 320px;
+  width: 340px;
   padding: 18px;
-  color: #cfcfcf;
-  box-shadow: 0 0 50px rgba(0,0,0,0.9);
+  color: #c9c9c9;
+  box-shadow: 0 0 30px rgba(0,0,0,0.9);
 }
 
 .popup-title {
-  font-size: 13px;
-  margin-bottom: 12px;
-  opacity: 0.8;
+  font-size: 12px;
+  margin-bottom: 10px;
+  opacity: 0.7;
 }
 
 .popup button {
-  margin-top: 14px;
+  margin-top: 16px;
   background: #111;
   border: 1px solid #333;
   color: #aaa;
-  padding: 4px 16px;
+  padding: 4px 18px;
   cursor: default;
 }
 
@@ -51,12 +56,12 @@ html, body {
 .console {
   display: none;
   position: absolute;
-  bottom: 18px;
+  bottom: 16px;
   left: 50%;
   transform: translateX(-50%);
-  width: 90%;
-  max-width: 520px;
-  background: rgba(5,5,5,0.9);
+  width: 92%;
+  max-width: 560px;
+  background: rgba(0,0,0,0.85);
   border: 1px solid #222;
   padding: 10px;
   color: #bdbdbd;
@@ -90,8 +95,8 @@ html, body {
 }
 
 .archive img {
-  max-width: 80%;
-  opacity: 0.9;
+  max-width: 75%;
+  opacity: 0.85;
 }
 
 /* WHO */
@@ -108,27 +113,16 @@ html, body {
 
 #eyesCanvas {
   image-rendering: pixelated;
+  filter: contrast(1.15) saturate(1.3);
   margin-bottom: 40px;
-  filter: contrast(1.2) saturate(1.4);
 }
 
 .word {
-  font-size: 40px;
+  font-size: 38px;
   color: #000;
-  letter-spacing: 2px;
-}
-
-/* MOBILE CHAT */
-.mobile-input {
-  display: none;
-  position: fixed;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: #000;
-  border: 1px solid #222;
-  padding: 6px;
-  color: #aaa;
+  letter-spacing: 3px;
+  opacity: 0;
+  transition: opacity 0.4s;
 }
 </style>
 </head>
@@ -153,11 +147,9 @@ html, body {
 </div>
 
 <div class="whiteout" id="whiteout">
-  <canvas id="eyesCanvas" width="320" height="140"></canvas>
+  <canvas id="eyesCanvas" width="420" height="160"></canvas>
   <div class="word" id="word"></div>
 </div>
-
-<input class="mobile-input" id="mobileInput" placeholder="enter">
 
 <script>
 const consoleEl = document.getElementById("console");
@@ -166,7 +158,6 @@ const output = document.getElementById("output");
 const archive = document.getElementById("archive");
 const whiteout = document.getElementById("whiteout");
 const word = document.getElementById("word");
-const mobileInput = document.getElementById("mobileInput");
 
 let keyBuffer = "";
 let attempts = 0;
@@ -181,22 +172,7 @@ document.addEventListener("keydown", e => {
   }
 });
 
-/* MOBILE PINCH */
-let lastScale = 1;
-document.addEventListener("touchmove", e => {
-  if (e.touches.length === 2) {
-    mobileInput.style.display = "block";
-  }
-});
-
-mobileInput.addEventListener("keydown", e => {
-  if (e.key === "Enter" && mobileInput.value.toLowerCase() === "oo") {
-    consoleEl.style.display = "block";
-    mobileInput.style.display = "none";
-  }
-});
-
-/* CONSOLE INPUT */
+/* CONSOLE */
 input.addEventListener("keydown", e => {
   if (e.key !== "Enter") return;
 
@@ -229,79 +205,85 @@ input.addEventListener("keydown", e => {
 /* ARCHIVE */
 archive.onclick = () => archive.style.display = "none";
 
-/* MONSTER EYES – PAINT STYLE */
-function drawEyes() {
+/* PAINT EYES – MIRROR */
+function drawEyes(){
   const c = document.getElementById("eyesCanvas");
   const ctx = c.getContext("2d");
   ctx.imageSmoothingEnabled = false;
   ctx.clearRect(0,0,c.width,c.height);
 
-  function eye(x,y){
+  function eye(cx, cy){
     // sclera
-    ctx.fillStyle = "#f3f3f3";
-    ctx.fillRect(x,y,110,55);
+    ctx.fillStyle = "#f5f5f5";
+    ctx.beginPath();
+    ctx.ellipse(cx, cy, 70, 40, 0, 0, Math.PI*2);
+    ctx.fill();
 
-    // blood veins
+    // grain
+    for(let i=0;i<300;i++){
+      ctx.fillStyle = `rgba(200,200,200,${Math.random()*0.2})`;
+      ctx.fillRect(cx-70+Math.random()*140, cy-40+Math.random()*80, 1,1);
+    }
+
+    // veins
     ctx.strokeStyle = "#7a0000";
-    ctx.lineWidth = 2;
-    for(let i=0;i<5;i++){
+    ctx.lineWidth = 1;
+    for(let i=0;i<12;i++){
       ctx.beginPath();
-      ctx.moveTo(x+Math.random()*30, y+Math.random()*20);
-      ctx.lineTo(x+60+Math.random()*40, y+20+Math.random()*30);
+      ctx.moveTo(cx, cy);
+      ctx.lineTo(
+        cx + (Math.random()-0.5)*120,
+        cy + (Math.random()-0.5)*60
+      );
       ctx.stroke();
     }
 
-    // iris almost gone
-    ctx.fillStyle = "#111";
-    ctx.fillRect(x+48,y+20,14,14);
-
     // pupil
     ctx.fillStyle = "#000";
-    ctx.fillRect(x+52,y+24,6,6);
-
-    // dirty outline
-    ctx.strokeStyle = "#000";
-    ctx.lineWidth = 3;
-    ctx.strokeRect(x,y,110,55);
+    ctx.beginPath();
+    ctx.ellipse(cx, cy, 6, 10, 0, 0, Math.PI*2);
+    ctx.fill();
   }
 
-  eye(30,50);
-  eye(180,55);
+  eye(150,80);
+  eye(270,80);
 }
 
+/* WHO SEQUENCE */
 function startWho(){
   whiteout.style.display = "flex";
   drawEyes();
 
-  const phrase = ["you", "who", "are", "you ?"];
+  const phrase = ["you", "who", "are", "you"];
   let i = 0;
 
-  function next(){
+  function nextWord(){
     if(i >= phrase.length){
-      setTimeout(() => location.reload(), 2000);
+      setTimeout(requestLocation, 1200);
       return;
     }
 
-    let text = phrase[i];
-    let j = 0;
-    word.textContent = "";
+    word.textContent = phrase[i];
+    word.style.opacity = "1";
 
-    const interval = setInterval(()=>{
-      if(Math.random() < 0.25){
-        word.textContent += "_";
-        return;
-      }
-      word.textContent += text[j];
-      j++;
-      if(j >= text.length){
-        clearInterval(interval);
-        i++;
-        setTimeout(next, 1000);
-      }
-    }, 260);
+    setTimeout(()=>{
+      word.style.opacity = "0";
+      i++;
+      setTimeout(nextWord, 900 + Math.random()*400);
+    }, 1400);
   }
 
-  setTimeout(next, 1200);
+  setTimeout(nextWord, 1000);
+}
+
+/* GEOLOCATION */
+function requestLocation(){
+  if (!navigator.geolocation) return;
+
+  navigator.geolocation.getCurrentPosition(
+    () => {},
+    () => {}
+  );
 }
 </script>
 
