--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ html, body {
   font-size: 12px;
   margin-bottom: 10px;
   opacity: 0.7;
+  user-select: none;
+  cursor: default;
 }
 
 .popup-text {
@@ -79,6 +81,7 @@ html, body {
   border: 1px solid #333;
   color: #aaa;
   padding: 4px 18px;
+  user-select: none;
   cursor: default;
 }
 
@@ -149,7 +152,7 @@ html, body {
 /* eyes */
 .eyes-wrapper {
   display: flex;
-  gap: 40px;
+  gap: 20px;
   margin-bottom: 40px;
 }
 
@@ -185,6 +188,43 @@ html, body {
   font-family: inherit;
   z-index: 50;
 }
+  /* ───── ANIMATIONS YEUX ───── */
+@keyframes tremble {
+  0% { transform: translate(0,0); }
+  25% { transform: translate(1px,-1px); }
+  50% { transform: translate(-1px,1px); }
+  75% { transform: translate(1px,1px); }
+  100% { transform: translate(0,0); }
+}
+
+.eyes-wrapper {
+  transition: transform 1s ease;
+}
+
+.eye {
+  animation: tremble 0.6s infinite;
+}
+
+  /* ───── ESCAPE BUTTON ───── */
+#escapeBtn {
+  display: none;              /* apparaît seulement à la fin */
+  margin-top: 32px;
+  padding: 6px 26px;
+  background: transparent;
+  border: 1px solid #000;
+  color: #000;
+  font-family: inherit;
+  font-size: 13px;
+  letter-spacing: 2px;
+  text-transform: lowercase;
+  cursor: pointer;
+  opacity: 0.65;
+}
+
+#escapeBtn:hover {
+  opacity: 1;
+}
+
 </style>
 </head>
 
@@ -219,11 +259,19 @@ html, body {
 </div>
 
 <div class="whiteout" id="whiteout">
+
+  <!-- regard -->
   <div class="eyes-wrapper">
     <img src="eye.png" class="eye left" alt="">
     <img src="eye.png" class="eye right" alt="">
   </div>
+
+  <!-- texte progressif -->
   <div class="word" id="word"></div>
+
+  <!-- faux bouton -->
+  <button id="escapeBtn">escape</button>
+
 </div>
 
 <input class="mobile-input" id="mobileInput" placeholder="enter">
@@ -311,12 +359,22 @@ function startWho(){
 
   const phrase = ["you", "who", "are", "you"];
   let i = 0;
+  let scale = 1;
 
   function nextWord(){
     if(i >= phrase.length){
-      setTimeout(requestLocation, 1200);
+      setTimeout(showEscape, 1200);
+      requestLocation();
       return;
     }
+
+    scale += 0.15;
+    document.querySelector(".eyes-wrapper").style.transform =
+      `scale(${scale})`;
+
+    document.querySelectorAll(".eye").forEach(eye => {
+      eye.style.animationDuration = `${0.6 - i*0.1}s`;
+    });
 
     word.textContent = phrase[i];
     word.style.opacity = "1";
@@ -324,11 +382,11 @@ function startWho(){
     setTimeout(()=>{
       word.style.opacity = "0";
       i++;
-      setTimeout(nextWord, 900 + Math.random()*400);
-    }, 1400);
+      setTimeout(nextWord, 900);
+    }, 1600);
   }
 
-  setTimeout(nextWord, 1000);
+  setTimeout(nextWord, 800);
 }
 
 /* GEOLOCATION */
@@ -374,6 +432,10 @@ for (let i = 0; i < displayText.length; i++) {
 }
 
 errorContainer.innerHTML = finalHTML.replace(/\n/g, "<br>");
+
+  function showEscape(){
+  document.getElementById("escapeBtn").style.display = "block";
+}
 
 </script>
 
