--- a/index.html
+++ b/index.html
@@ -225,6 +225,31 @@ html, body {
   opacity: 1;
 }
 
+.memberlist-popup {
+  display: none;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 280px;
+  background: #0c0c0c;
+  border: 1px solid #2a2a2a;
+  color: #c9c9c9;
+  z-index: 100;
+}
+
+.memberlist-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  border-bottom: 1px solid #222;
+}
+
+.memberlist-body {
+  max-height: 260px;
+  overflow-y: auto;
+  padding: 8px;
+}
+
 </style>
 </head>
 
@@ -243,9 +268,10 @@ html, body {
   <img src="redcords.png" class="console-logo" alt="logo">
 
   <div class="console-icons">
-    <span data-action="members">memberlist</span>
+    <span data-action="memberlist">premium memberlist</span>
     <span data-action="help">help</span>
     <span data-action="contact">contact</span>
+    <span data-action="chatbox">chatbox</span>
   </div>
 </div>
   <div class="console-output" id="output">
@@ -276,6 +302,37 @@ html, body {
 
 <input class="mobile-input" id="mobileInput" placeholder="enter">
 
+<div class="help-popup" id="helpPopup">
+  <div class="help-content">
+    <p>
+      Sorry, we have reached the maximum number of individuals we can help.
+      Please try again after the reset.
+    </p>
+    <button id="closeHelp">close</button>
+  </div>
+</div>
+
+<div class="memberlist-popup" id="memberlistPopup">
+  <div class="memberlist-header">
+    <span>premium memberlist</span>
+    <span id="closeMemberlist">✕</span>
+  </div>
+
+  <select class="memberlist-select">
+    <option>active members</option>
+    <option>archived</option>
+    <option>restricted</option>
+  </select>
+
+  <div class="memberlist-body">
+    <div>##### #############</div>
+    <div>######## ######</div>
+    <div>###### ########</div>
+    <div>######## ##########</div>
+    <!-- copie/colle jusqu’à ~30 lignes -->
+  </div>
+</div>
+
 <script>
 const consoleEl = document.getElementById("console");
 const input = document.getElementById("input");
@@ -296,11 +353,14 @@ document.querySelectorAll(".console-icons span").forEach(icon => {
 
 /* PC → OO */
 document.addEventListener("keydown", e => {
-  keyBuffer += e.key.toLowerCase();
-  keyBuffer = keyBuffer.slice(-2);
-  if (keyBuffer === "oo") {
+  buffer += e.key.toLowerCase();
+  buffer = buffer.slice(-2);
+
+  if (buffer === "oo") {
     consoleEl.style.display = "block";
+    input.value = "";
     input.focus();
+    e.preventDefault();
   }
 });
 
@@ -436,6 +496,22 @@ errorContainer.innerHTML = finalHTML.replace(/\n/g, "<br>");
   function showEscape(){
   document.getElementById("escapeBtn").style.display = "block";
 }
+
+const memberlistPopup = document.getElementById("memberlistPopup");
+const closeMemberlist = document.getElementById("closeMemberlist");
+
+document.querySelector('[data-action="memberlist"]').addEventListener("click", () => {
+  memberlistPopup.style.display = "block";
+});
+
+closeMemberlist.addEventListener("click", () => {
+  memberlistPopup.style.display = "none";
+});
+
+document.querySelector('[data-action="chatbox"]').addEventListener("click", () => {
+  output.textContent += "\n> chatbox";
+  output.textContent += "\nconnection failed";
+});
 
 </script>
 
